--- a/PetPokemon/PetPokemon.csproj
+++ b/PetPokemon/PetPokemon.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
 
